# openai-terminal-client

./: .gitignore  LICENSE.md  genie.py  notes.md  persona.py  personatui.py  pyproject.toml  readme.md  requirements.txt
etc/: persona.conf.yaml  persona.conf.yaml.example
etc/personas/: advanced.persona.example  agile_coach.persona  aging_hipster.persona  basic.persona.example  code_review.persona  cybersecurty_expert.persona  default.persona  default.persona.example  grumpy.persona  interviewer.persona  machine_learning_expert.persona  open_source_advocate.persona  python_tutor.persona  webdev_coach.persona
etc/templates/default/: assistant.tmpl  system.tmpl  user.tmpl
etc/templates/grumpy/: assistant.tmpl  system.tmpl  user.tmpl
etc/templates/legacy/: system.tmpl  user.tmpl
persona/: commands.py  conf.py  config.py  console.py  conversation.py  extras.py  message.py  persona.py  personachat.py  prompts.py  tui.py  tui_chat.py  tui_settings  utils.py
persona/static/: styles.css
src/: commands.py  conf.py  console.py  conversation.py  extras.py  persona.py  personachat.py
